solar-system/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solar-system
spec:
  selector:
    app: solar-system
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
